--- a/01_Reports_App/src/main/resources/application.properties
+++ b/01_Reports_App/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=01_Reports_App
-
+server.port=2020
 spring.datasource.url=jdbc:mysql://localhost:3306/jrtp
 spring.datasource.username=root
 spring.datasource.password=Alok@123
